# alef

./: CMakeLists.txt
test/: CMakeLists.txt
test/core/concepts/: character_test.cpp  chars_test.cpp  floating_point_test.cpp  integral_test.cpp  logic_test.cpp  number_test.cpp
test/core/error/: result.cpp
test/core/numerics/big_integer/arithmetic/: add_long_number_test.cpp  add_test.cpp  divide_long_number_test.cpp  divide_test.cpp  mod_test.cpp  multiply_long_number_test.cpp  multiply_test.cpp  subtract_long_number_test.cpp  subtract_test.cpp
test/core/numerics/big_integer/checking/: is_negative_test.cpp  is_positive_test.cpp  is_pow10.cpp
test/core/numerics/big_integer/comparison/: equivalent_test.cpp  greater.cpp  less_test.cpp  not_equivalent_test.cpp
test/core/numerics/big_integer/constructing/: copy_assignment_operator_test.cpp  copy_constructor_test.cpp  from_char_pointer_assignment_operator.cpp  from_char_pointer_constructor.cpp  from_integral_assignment_operator.cpp  from_integral_constructor.cpp  from_string_assignment_operator.cpp  from_string_constructor.cpp  move_assignment_operator_test.cpp  move_constructor_test.cpp
test/core/numerics/big_integer/converting/: operator_bool_test.cpp  to_integer_int64_test.cpp  to_integer_int_test.cpp
test/core/numerics/big_integer/math/: abs_test.cpp  gcd_test.cpp  lcm_test.cpp  pow10_test.cpp  pow_test.cpp  sqrt.cpp
test/core/numerics/big_integer/modification/: decrement_test.cpp  increment_test.cpp  negate_test.cpp  shift_left_test.cpp  shift_right_test.cpp  swap_test.cpp
test/core/serializing/: json.cpp
test/core/strings/: split.cpp
test/core/strings/algorithms/: utility_split.cpp
test/core/strings/algorithms/serch/: kmp.cpp
test/core/types/: integer.cpp
test/core/utility/strings/: split.cpp
test/lib/concepts/: chars_test.cpp  floating_point_test.cpp  integral_test.cpp  logic_test.cpp  number_test.cpp
test/lib/err_fusion/: logic_error.h
test/lib/error/: result.cpp  utility.h
test/lib/numerics/big_integer/arithmetic/: add_long_number_test.cpp  add_test.cpp  divide_long_number_test.cpp  divide_test.cpp  mod_test.cpp  multiply_long_number_test.cpp  multiply_test.cpp  subtract_long_number_test.cpp  subtract_test.cpp
test/lib/numerics/big_integer/checking/: is_negative_test.cpp  is_positive_test.cpp  is_pow10.cpp
test/lib/numerics/big_integer/comparison/: equivalent_test.cpp  (+3 more)
test/lib/serializing/: json.cpp
(+173 files in other folders)
